UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_Asset_Staging_OCAM__c/ftr_Asset_Staging_OCAM__c.object-meta.xml
<CustomObject>
    <label>ftr_Asset_Staging_OCAM</label>
    <nameField>
        <displayFormat>OC-{00000000}</displayFormat>
        <label>ftr_Asset_Staging_OCAM Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ftr_Asset_Staging_OCAMs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>