UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_Asset_Staging_OCAM__c/fields/ACCT_BTN__c.field-meta.xml
<CustomField>
    <fullName>ACCT_BTN__c</fullName>
    <label>ACCT_BTN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>