UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_Asset_Staging_OCAM__c/fields/CUST_NO__c.field-meta.xml
<CustomField>
    <fullName>CUST_NO__c</fullName>
    <label>CUST_NO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>